...
                                    .background(Color.Black.copy(alpha = 0.5f), CircleShape)
                                    .clickable(onClick = onDismiss),
                                contentAlignment = Alignment.Center,
                                content = {
                                    Icon(
                                        imageVector = Icons.Default.Close,
                                        contentDescription = "Close",
                                        tint = Color.White,
                                        modifier = Modifier.size(17.dp)
                                    )
                                }
                            )
                            Box(
...
                                            CircleShape
                                        ),
                                    contentAlignment = Alignment.Center,
                                    content = {
                                        Icon(
                                            painter = painterResource(R.drawable.expand),
                                            contentDescription = "Maximize",
                                            tint = Color.White,
                                            modifier = Modifier.size(12.dp)
                                        )
                                    }
                                )
                            }
...
                        onClick = {
                            onHide(onDismiss)
                        },
                        content = {
                            Icon(
                                painter = painterResource(R.drawable.minimize),
                                contentDescription = "Minimize",
                                tint = Color.White,
                                modifier = Modifier.size(23.dp)
                            )
                        }
                    )
                    Row(
...
