...
                                    .fillMaxWidth()
                                    .appstorys("closebutton"),
                                colors = ButtonDefaults.buttonColors(
                                    containerColor = Color(0xFF0752ad)
                                )
                            ) {
                                Text("Close")
                            }
                        }
                        campaignManager.overlayElements(insideBottomSheet = true)
                    }
                }

...
        containerColor = Color.White, // Add this line to set the background color to white
        modifier = Modifier
            .fillMaxWidth()
            .height(70.dp)

    ) {
        val items = listOf("Parties", "More")
        val icons = listOf(Icons.Filled.Person, Icons.Filled.List)

        Row(
            modifier = Modifier.fillMaxWidth(),
            horizontalArrangement = Arrangement.SpaceAround // Adjust spacing here
        ) {
...
